--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag transfeatex:$(date +%s)
+      run: docker build . --file Dockerfile.small_model --tag transfeatex:$(date +%s)
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
